clusters/k8s-robbinsdale/apps/home/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-tls
  namespace: external-name
  annotations:
    cert-manager.io/cluster-issuer: luke-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: frigate.lukehouge.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 8971
  tls:
    - secretName: frigate-luke-tls
      hosts:
        - frigate.lukehouge.com
